--- a/styles/components/_marketNewsTypeSecondary.scss
+++ b/styles/components/_marketNewsTypeSecondary.scss
@@ -48,6 +48,7 @@
       justify-content: flex-start;
       align-items: center;
       p {
+        height:46.5px ;
         margin: 0px;
         padding-top:2px;
         font-family: "Product Sans", sans-serif;
@@ -95,6 +96,7 @@
       .blogHeader {
         p {
           font-size: 20px;
+          height: 58px;
         }
       }
 
