--- a/styles/components/_marketNewsTypeMain.scss
+++ b/styles/components/_marketNewsTypeMain.scss
@@ -1,6 +1,7 @@
 .marketNewsTypeMain {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: flex-start;
   padding: 0px;
   gap: 16px;
@@ -16,6 +17,7 @@
     border-radius: 6px;
     width: 100%;
     height: 180px;
+    border: solid 1px;
   }
 
   .blogContents {
@@ -24,6 +26,7 @@
     justify-content: center;
     align-items: flex-start;
     gap: 10px;
+    border: solid 1px;
 
     .blogCategoryTitle {
       display: flex;
