--- a/styles/pages/_homePage.scss
+++ b/styles/pages/_homePage.scss
@@ -356,7 +356,7 @@
             }
           }
 
-          .propertCardDiv {
+          .propertyCardDiv {
             display: flex;
             flex-direction: row;
             align-items: flex-start;
@@ -374,17 +374,12 @@
 
             .propertyCard {
               box-sizing: border-box;
-              display: flex;
-              flex-direction: column;
-              align-items: flex-start;
-              padding: 8px 8px 16px;
               gap: 8px;
               isolation: isolate;
               width: 280px;
               min-height: 294px;
               height: fit-content;
               background: #ffffff;
-              border: 1px solid #d8d8d8;
               border-radius: 6px;
               flex: none;
               order: 0;
@@ -466,7 +461,7 @@
               flex-direction: column;
               justify-content: flex-end;
               align-items: center;
-              padding: 16px;
+              padding: 0px;
               gap: 10px;
               width: 250px;
               height: 250px;
@@ -563,7 +558,7 @@
               order: 1;
               align-self: stretch;
               flex-grow: 0;
-              border: solid 1px;
+              border: solid 2px;
 
               .homeLoanCard {
                 display: flex;
@@ -1323,7 +1318,7 @@
               }
             }
 
-            .propertCardDiv {
+            .propertyCardDiv {
               display: flex;
               flex-direction: row;
               align-items: flex-start;
@@ -1341,21 +1336,10 @@
 
               .propertyCard {
                 box-sizing: border-box;
-                display: flex;
-                flex-direction: column;
-                align-items: flex-start;
-                padding: 8px 8px 16px;
-                gap: 8px;
                 isolation: isolate;
                 width: 280px;
                 min-height: 294px;
                 height: fit-content;
-                background: #ffffff;
-                border: 1px solid #d8d8d8;
-                border-radius: 6px;
-                flex: none;
-                order: 0;
-                flex-grow: 0;
               }
             }
           }
@@ -1434,7 +1418,7 @@
                 flex-direction: column;
                 justify-content: flex-end;
                 align-items: center;
-                padding: 16px;
+                padding: 0px;
                 gap: 10px;
                 width: 250px;
                 min-height: 250px;
@@ -1726,7 +1710,7 @@
                   justify-content: center;
                   align-items: flex-start;
                   padding: 0px;
-                  gap: 16px;
+                  gap: calc(16*100%/345);
                   width: 100%;
                   height: 90px;
                   flex: none;
@@ -2261,7 +2245,7 @@
             padding: 0px;
             gap: 24px;
             width: 100%;
-            min-height: 408px;
+            min-height: 400px;
             height: fit-content;
             color: black;
 
@@ -2308,34 +2292,29 @@
               }
             }
 
-            .propertCardDiv {
+            .propertyCardDiv {
               display: flex;
               flex-direction: row;
               align-items: flex-start;
               padding: 0px;
               gap: calc(24 * 100% / 1277);
               width: 100%;
-              min-height: 358px;
+              min-height: 334px;
               height: fit-content;
               overflow-x: scroll;
               overflow-y: hidden;
               flex: none;
               align-self: stretch;
-              flex-grow: 0;
-              border: solid 1px brown;
 
               .propertyCard {
                 box-sizing: border-box;
-                // display: flex;
-                // flex-direction: column;
-                // align-items: flex-start;
-                // padding: 8px 8px 16px;
                 isolation: isolate;
-                width: 302px;
-                min-height: 358px;
+                min-width: 302px;
+                width: fit-content;
+                min-height: 334px;
                 height: fit-content;
                 background: #ffffff;
-                border: 1px solid #d8d8d8;
+                border: none;
                 border-radius: 6px;
                 flex: none;
                 flex-grow: 0;
@@ -2416,7 +2395,7 @@
                 flex-direction: column;
                 justify-content: flex-end;
                 align-items: center;
-                padding: 16px;
+                padding: 0;
                 gap: 10px;
                 width: calc(410.67 * 100% / 1277);
                 height: fit-content;
@@ -2626,6 +2605,7 @@
 
           .flexTwo {
             position: relative;
+            min-height: auto;
             height: fit-content;
             width: 100%;
             display: flex;
@@ -2633,7 +2613,6 @@
             gap: 2%;
             justify-content: center;
             align-items: center;
-            border: solid 1px;
 
             .lawPolicyDiv {
               display: flex;
@@ -2701,14 +2680,13 @@
                 min-height: 304px;
                 height: fit-content;
                 flex: none;
-                order: 1;
                 align-self: stretch;
                 flex-grow: 0;
                 border: solid 1px;
 
                 .lawPolicyCard {
                   display: flex;
-                  flex-direction: row;
+                  flex-direction: column;
                   justify-content: center;
                   align-items: flex-start;
                   width: calc(302 * 100% / 1277);
@@ -3041,6 +3019,21 @@
 }
 
 .blogPreviewDiv::-webkit-scrollbar-thumb {
+  background-color: grey;
+  border-radius: 10px;
+}
+
+
+.propertyCardDiv::-webkit-scrollbar {
+  // width: 12px;
+  height: 2px;
+}
+
+.propertyCardDiv::-webkit-scrollbar-track {
+  display: none;
+}
+
+.propertyCardDiv::-webkit-scrollbar-thumb {
   background-color: grey;
   border-radius: 10px;
 }
