--- a/styles/pages/_homePage.scss
+++ b/styles/pages/_homePage.scss
@@ -1544,7 +1544,7 @@
               position: relative;
               width: 100%;
               height: 354px;
-              border: solid 1px;
+              border: solid 1px green;
 
               .ourThoughtsTitleDiv {
                 display: flex;
