--- a/styles/components/_homeLoan.scss
+++ b/styles/components/_homeLoan.scss
@@ -98,7 +98,8 @@
       .blogHeader {
         p {
           font-size: 20px;
-          line-height: 140%;
+          line-height: 150%;
+          height:auto;
         }
       }
 
