--- a/styles/layout/_blogBodyRightSidebar.scss
+++ b/styles/layout/_blogBodyRightSidebar.scss
@@ -38,7 +38,6 @@
         margin: 0px;
         padding: 0px;
         // width: 30px;
-        // border: solid 1px;
       }
 
       .relatedBlogsView {
@@ -99,7 +98,6 @@
         color: #333333;
         margin: 0px;
         padding: 0px;
-        // border: solid 1px;
       }
       button {
         background: transparent;
@@ -121,10 +119,49 @@
   }
 }
 
+
+
 @media screen and (min-width: 768px) {
   .rightSidebar {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: 2.5%;
+    align-items: flex-start;
+    
+    .relatedSection {
+      width: 100%;
+      .relatedSectionTitle {
+        p {
+        }
+        button {
+        }
+      }
+      .relatedSectionContainer {
+      }
+    }
+    .featuredSection {
+      width: 100%;
+      .featuredSectionTitle {
+        p {
+        }
+        button {
+        }
+      }
+      .featuredSectionContainer {
+      }
+    }
+  }
+}
+
+
+
+@media screen and (min-width: 1024px) {
+  .rightSidebar {
     width: 490px;
-    padding-right: 72.5px;
+    flex-direction: column;
+    gap:40px ;
+    // padding-right: 72.5px;
 
     .relatedSection {
       width: 100%;
@@ -150,3 +187,4 @@
     }
   }
 }
+
