--- a/styles/components/_categorySpecificBlog.scss
+++ b/styles/components/_categorySpecificBlog.scss
@@ -24,43 +24,51 @@
     align-items: flex-start;
     gap: 10px;
 
-    .blogCategoryTitle {
+    .blogHeaderSectionContainer {
       display: flex;
-      flex-direction: row;
-      justify-content: flex-start;
-      align-items: center;
-      p {
-        margin: 0px;
-        padding: 0px;
-        font-family: "Product Sans", sans-serif;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 10px;
-        line-height: 140%;
-        text-transform: uppercase;
-        color: #0000ff;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      gap: 6px;
+
+      .blogCategoryTitle {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+        p {
+          margin: 0px;
+          padding: 0px;
+          font-family: "Product Sans", sans-serif;
+          font-style: normal;
+          font-weight: 400;
+          font-size: 10px;
+          line-height: 140%;
+          text-transform: uppercase;
+          color: #0000ff;
+        }
       }
-    }
-    .blogHeader {
-      display: flex;
-      flex-direction: row;
-      justify-content: flex-start;
-      align-items: center;
-      p {
-        margin: 0px;
-        padding: 0px;
-        font-family: "Product Sans", sans-serif;
-        font-style: normal;
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 140%;
-        color: #333333;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: initial;
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
+      .blogHeader {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+        p {
+          margin: 0px;
+          padding: 0px;
+          font-family: "Product Sans", sans-serif;
+          font-style: normal;
+          font-weight: 700;
+          font-size: 16px;
+          line-height: 140%;
+          color: #333333;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: initial;
+          display: -webkit-box;
+          -webkit-line-clamp: 2;
+          -webkit-box-orient: vertical;
+        }
       }
     }
 
@@ -69,6 +77,7 @@
       flex-direction: row;
       justify-content: flex-start;
       align-items: center;
+
       p {
         margin: 0px;
         padding: 0px;
@@ -84,6 +93,10 @@
         display: -webkit-box;
         -webkit-line-clamp: 4;
         -webkit-box-orient: vertical;
+      }
+
+      figure {
+        display: none;
       }
     }
 
