--- a/styles/pages/_homePage.scss
+++ b/styles/pages/_homePage.scss
@@ -50,7 +50,8 @@
 
     .contentDiv {
       height: fit-content;
-      width: 375px;
+      width: 100%;
+      max-width: 425px;
       display: flex;
       flex-direction: column;
       // padding-top: 8px;
@@ -199,7 +200,7 @@
             align-items: center;
             padding: 0px;
             gap: 16px;
-            width: 345px;
+            width: 100%;
             height: 28px;
             flex: none;
             order: 0;
@@ -241,7 +242,7 @@
             align-items: flex-start;
             padding: 0px;
             gap: 24px;
-            width: 345px;
+            width: 100%;
             height: fit-content;
             flex: none;
             align-self: stretch;
@@ -255,7 +256,7 @@
             align-items: flex-start;
             padding: 0px;
             gap: 16px;
-            width: 345px;
+            width: 100%;
             height: fit-content;
             flex: none;
             align-self: stretch;
@@ -962,7 +963,7 @@
   }
 }
 
-@media only screen and (min-width: 670px) {
+@media only screen and (min-width: 710px) {
   .alignmentContainer {
     min-height: 100vh;
     height: 100%;
