--- a/styles/layout/Navbar.scss
+++ b/styles/layout/Navbar.scss
@@ -13,6 +13,10 @@
     background: #FFFFFF;
     border: none;
 
+    // @media screen and (min-width:710px) {
+    //     max-width: 710px;
+    // }
+
     @media screen and (min-width:768px) {
         max-width: 800px;
     }
