--- a/styles/pages/_homePage.scss
+++ b/styles/pages/_homePage.scss
@@ -12,6 +12,8 @@
   overflow: hidden;
 
   .navBlend {
+    display: flex;
+    justify-content: center;
     width: 100vw;
     position: fixed;
     height: 53px;
@@ -51,7 +53,7 @@
     .contentDiv {
       height: fit-content;
       width: 100%;
-      max-width: 425px;
+      max-width: 500px;
       display: flex;
       flex-direction: column;
       // padding-top: 8px;
@@ -1010,7 +1012,7 @@
       .contentDiv {
         height: fit-content;
         width: 100%;
-        max-width: 768px;
+        max-width: 800px;
         // 
         display: flex;
         flex-direction: column;
