--- a/styles/fonts/_main.scss
+++ b/styles/fonts/_main.scss
@@ -1,4 +1,9 @@
 @font-face {
-    font-family:"Product Sans";
-    src: url("/Fonts/ProductSans.ttf") format('truetype');
+  font-family: "Product Sans";
+  src: url("/Fonts/ProductSans.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Ek Mukta";
+  src: url("/Fonts/EkMukta-Regular.ttf") format("truetype");
 }
