--- a/styles/pages/_id.scss
+++ b/styles/pages/_id.scss
@@ -113,7 +113,7 @@
                 .categoryInfo {
                   height: fit-content;
                   width: fit-content;
-                  font-family: "Product Sans", sans-serif;
+                  font-family: "Ek Mukta";
                   font-style: normal;
                   font-weight: 400;
                   font-size: 14px;
