--- a/styles/components/_categorySpecificBlog.scss
+++ b/styles/components/_categorySpecificBlog.scss
@@ -39,7 +39,7 @@
         p {
           margin: 0px;
           padding: 0px;
-          font-family: "Product Sans", sans-serif;
+          font-family: "Ek Mukta";
           font-style: normal;
           font-weight: 400;
           font-size: 10px;
@@ -56,7 +56,7 @@
         p {
           margin: 0px;
           padding: 0px;
-          font-family: "Product Sans", sans-serif;
+          font-family: "Ek Mukta";
           font-style: normal;
           font-weight: 700;
           font-size: 16px;
@@ -81,7 +81,7 @@
       p {
         margin: 0px;
         padding: 0px;
-        font-family: "Product Sans", sans-serif;
+        font-family: "Ek Mukta";
         font-style: normal;
         font-weight: 400;
         font-size: 14px;
@@ -108,7 +108,7 @@
 
       .author,
       .posted {
-        font-family: "Product Sans", sans-serif;
+        font-family: "Ek Mukta";
         font-style: normal;
         font-weight: 400;
         font-size: 14px;
