--- a/styles/layout/Navbar.scss
+++ b/styles/layout/Navbar.scss
@@ -6,7 +6,7 @@
     padding-left: 15px;
     padding-right: 14.5px;
     width: 100%;
-    max-width: 500px;
+    // max-width: 500px;
     height: 100%;
     left: 0px;
     top: 0px;
