--- a/styles/pages/_blogDetails.scss
+++ b/styles/pages/_blogDetails.scss
@@ -54,7 +54,7 @@
       height: fit-content;
       width: 100%;
       min-width: 345px;
-      max-width: 500px;
+      max-width:none;
       display: flex;
       flex-direction: column;
       background-color: #ffffff;
