--- a/styles/layout/_footer.scss
+++ b/styles/layout/_footer.scss
@@ -574,6 +574,307 @@
   }
 }
 
+@media only screen and (min-width:1024px) {
+  .footerUpperDiv {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border: solid 1px white;
+    gap: 32px;
+    padding: 24px 5.5% 32px 5.5%;
+
+    .firstDiv {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      padding: 0px;
+      gap: 24px;
+
+      .logoAndContact {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 0px;
+        gap: 16px;
+        width: 196.15px;
+        height: 145px;
+
+        .logoDiv {
+          width: 196.15px;
+          height: 50px;
+        }
+
+        .contactDiv {
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          padding: 0px;
+          gap: 8px;
+          width: 164px;
+          height: 79px;
+
+          .contacts {
+            font-family: 'Roboto';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 21px;
+            color: #FFFFFF;
+          }
+        }
+      }
+
+      .appDiv {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 0px;
+        gap: 16px;
+        width: 261.96px;
+        height: 70px;
+
+        .appHeading {
+          font-family: 'Product Sans';
+          font-style: normal;
+          font-weight: 700;
+          font-size: 16px;
+          line-height: 140%;
+          display: flex;
+          align-items: center;
+          color: #FFFFFF;
+          mix-blend-mode: normal;
+        }
+
+        .iconDiv {
+          display: flex;
+          flex-direction: row;
+          align-items: flex-start;
+          padding: 0px;
+          gap: 16px;
+          width: 100%;
+          height: 32px;
+
+          .icons {
+            width: 124.4px;
+            height: 100%;
+            background-color: black;
+            border-radius: 6px;
+
+            .image {
+              width: 100%;
+            }
+          }
+        }
+      }
+    }
+
+    .categoryDiv {
+      width: calc(847*100%/1440);
+      // width: 100%;
+      display: flex;
+      flex-direction: row;
+      gap: calc(79.67*100%/847);
+      // border: solid 1px white;
+
+      .gorupThree {
+        width: calc(615.33*100%/847);
+        height: auto;
+        display: flex;
+        gap: calc(79.67*100%/615.33);
+        // border: solid 1px white;
+
+
+        .popularArea {
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          padding: 0px;
+          gap: 24px;
+          width: fit-content;
+          height: 230px;
+          border: solid 1px white;
+
+
+          .popularAreaHeading {
+            width: 100%;
+            height: 32px;
+            font-family: 'Product Sans';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 20px;
+            line-height: 140%;
+            display: flex;
+            align-items: center;
+            color: #FFFFFF;
+            mix-blend-mode: normal;
+            border: solid 1px white;
+          }
+
+          .popularAreaContent {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            padding: 0px;
+            gap: 16px;
+            width: fit-content;
+            height: 174px;
+
+            .popularAreaContentSpan {
+              font-family: 'Product Sans';
+              font-style: normal;
+              font-weight: 400;
+              font-size: 14px;
+              line-height: 140%;
+              width: fit-content;
+              word-spacing: 12px;
+              color: #E8E8E8;
+            }
+          }
+        }
+
+        .gorupThreeChild {
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          padding: 0px;
+          gap: 24px;
+          width:fit-content;
+          height: 230px;
+
+          .gorupThreeChildHeading {
+            width: fit-content;
+            height: 32px;
+            font-family: 'Product Sans';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 20px;
+            line-height: 140%;
+            display: flex;
+            align-items: center;
+            color: #FFFFFF;
+            mix-blend-mode: normal;
+          }
+
+          .gorupThreeChildContent {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            padding: 0px;
+            gap: 16px;
+            width: fit-content;
+            height: 174px;
+
+            .gorupThreeChildContentSpan {
+              font-family: 'Product Sans';
+              font-style: normal;
+              font-weight: 400;
+              font-size: 16px;
+              line-height: 140%;
+              color: #E8E8E8;
+            }
+          }
+        }
+      }
+
+      .socialDiv {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 0px;
+        gap: 24px;
+        width: fit-content;
+        height: 116px;
+        // border: solid 1px white;
+
+
+        .socialHeading {
+          width: 100%;
+          height: 32px;
+          font-family: 'Product Sans';
+          font-style: normal;
+          font-weight: 700;
+          font-size: 20px;
+          line-height: 140%;
+          display: flex;
+          align-items: center;
+          color: #FFFFFF;
+          mix-blend-mode: normal;
+        }
+
+        .socialContent {
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          padding: 0px;
+          gap: 16px;
+          width: fit-content;
+          height: 60px;
+
+          .socialList {
+            width: fit-content;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+
+            .socialIcon {
+              width: 16px;
+              height: 16px;
+              display: flex;
+              align-items: center;
+              // background: #E8E8E8;
+            }
+
+            .socialName {
+              font-family: 'Product Sans';
+              font-style: normal;
+              font-weight: 400;
+              font-size: 16px;
+              line-height: 140%;
+              color: #E8E8E8;
+            }
+          }
+        }
+      }
+
+    }
+  }
+
+  .footerLowerDiv {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 24px 5px 32px 15px;
+    gap: 8px;
+    width: 100%;
+    height: fit-content;
+    background: #1E1E1E;
+
+    .disclaimerHeading {
+      font-family: 'Product Sans';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 140%;
+      display: flex;
+      align-items: center;
+      color: #E8E8E8;
+      mix-blend-mode: normal;
+    }
+
+    .disclaimerContent {
+      font-family: 'Product Sans';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 12px;
+      line-height: 140%;
+      display: flex;
+      align-items: center;
+      color: #E8E8E8;
+      mix-blend-mode: normal;
+    }
+  }
+}
+
 
 
 
