--- a/styles/pages/_homePage.scss
+++ b/styles/pages/_homePage.scss
@@ -1903,7 +1903,7 @@
         .contentFooter {
           position: relative;
           width: 100%;
-          height: 1036px;
+          height: fit-content;
           background: #4f4f4f;
         }
       }
