bottom components and footer finalized

--- a/styles/pages/_homePage.scss
+++ b/styles/pages/_homePage.scss
@@ -2938,7 +2938,7 @@
         .contentFooter {
           position: relative;
           width: 100%;
-          min-height: 474px;
+          // min-height: 474px;
           height: fit-content;
           background: #4f4f4f;
         }
