--- a/styles/layout/_footer.scss
+++ b/styles/layout/_footer.scss
@@ -579,9 +579,11 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    border: solid 1px white;
+    align-items: center;
+    // border: solid 1px white;
     gap: 32px;
     padding: 24px 5.5% 32px 5.5%;
+    height: fit-content;
 
     .firstDiv {
       display: flex;
@@ -631,7 +633,7 @@
         padding: 0px;
         gap: 16px;
         width: 261.96px;
-        height: 70px;
+        height: fit-content;
 
         .appHeading {
           font-family: 'Product Sans';
@@ -647,12 +649,18 @@
 
         .iconDiv {
           display: flex;
-          flex-direction: row;
+          flex-direction: column;
           align-items: flex-start;
           padding: 0px;
-          gap: 16px;
+          gap: 8px;
           width: 100%;
-          height: 32px;
+          height: fit-content;
+
+          @media only screen and (min-width:1100px) {
+            flex-direction: row;
+            gap: 16px;
+          }
+
 
           .icons {
             width: 124.4px;
@@ -669,7 +677,8 @@
     }
 
     .categoryDiv {
-      width: calc(847*100%/1440);
+      width: fit-content;
+      min-width: calc(847*100%/1440);
       // width: 100%;
       display: flex;
       flex-direction: row;
@@ -677,8 +686,10 @@
       // border: solid 1px white;
 
       .gorupThree {
-        width: calc(615.33*100%/847);
-        height: auto;
+        width: fit-content;
+        justify-content: flex-end;
+        min-width: calc(615.33*100%/847);
+        height: 100%;
         display: flex;
         gap: calc(79.67*100%/615.33);
         // border: solid 1px white;
@@ -692,7 +703,7 @@
           gap: 24px;
           width: fit-content;
           height: 230px;
-          border: solid 1px white;
+          // border: solid 1px white;
 
 
           .popularAreaHeading {
@@ -707,7 +718,7 @@
             align-items: center;
             color: #FFFFFF;
             mix-blend-mode: normal;
-            border: solid 1px white;
+            // border: solid 1px white;
           }
 
           .popularAreaContent {
@@ -716,7 +727,7 @@
             align-items: flex-start;
             padding: 0px;
             gap: 16px;
-            width: fit-content;
+            width: max-content;
             height: 174px;
 
             .popularAreaContentSpan {
@@ -728,6 +739,8 @@
               width: fit-content;
               word-spacing: 12px;
               color: #E8E8E8;
+              // border: solid 1px white;
+              // height: 20px;
             }
           }
         }
@@ -740,6 +753,8 @@
           gap: 24px;
           width:fit-content;
           height: 230px;
+          // border: solid 1px white;
+
 
           .gorupThreeChildHeading {
             width: fit-content;
@@ -771,6 +786,7 @@
               font-size: 16px;
               line-height: 140%;
               color: #E8E8E8;
+              width: max-content;
             }
           }
         }
@@ -843,7 +859,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 24px 5px 32px 15px;
+    padding: 24px 5.5% 32px 5.5%;
     gap: 8px;
     width: 100%;
     height: fit-content;
@@ -865,7 +881,7 @@
       font-family: 'Product Sans';
       font-style: normal;
       font-weight: 400;
-      font-size: 12px;
+      font-size: 10px;
       line-height: 140%;
       display: flex;
       align-items: center;
