blogDetails CSS Refinement

--- a/styles/components/_relatedBlogs.scss
+++ b/styles/components/_relatedBlogs.scss
@@ -14,7 +14,8 @@
     border-radius: 6px;
 
     .relatedBlogsImage {
-      max-width: 100%;
+      // max-width: 100%;
+      width: auto;
       height: 100%;
       border-radius: 6px;
     }
