all page footer

--- a/styles/layout/_navbar.scss
+++ b/styles/layout/_navbar.scss
@@ -168,7 +168,7 @@
                 cursor: pointer;
                 transition-duration: 0.3s;
 
-                .blueButton p {
+                p {
                     width: fit-content;
                     height: 19px;
                     font-family: 'Product Sans';
@@ -184,7 +184,7 @@
                     padding: 0px;
                 }
 
-                .blueButton span {
+                span {
                     min-width: 16px;
                     height: 16px;
                     display: flex;
@@ -405,7 +405,7 @@
                     cursor: pointer;
                     transition-duration: 0.3s;
 
-                    .blueButton p {
+                    p {
                         width: fit-content;
                         height: 19px;
                         font-family: 'Product Sans';
@@ -421,7 +421,7 @@
                         padding: 0px;
                     }
 
-                    .blueButton span {
+                    span {
                         min-width: 16px;
                         height: 16px;
                         display: flex;
