--- a/styles/pages/_blogDetails.scss
+++ b/styles/pages/_blogDetails.scss
@@ -45,9 +45,18 @@
     .footerBlend {
       position: absolute;
       width: 100%;
-      height: 1015px;
+      height: 758px;
       background: #4f4f4f;
       bottom: 0px;
+
+      .lowerFooterBlend{
+        position: absolute;
+        bottom: 0px;
+        height: 201.5px;
+        width: 100%;
+        background-color: #1E1E1E;
+        // z-index: 2;
+      }
     }
 
     .contentDiv {
@@ -317,9 +326,18 @@
       .footerBlend {
         position: absolute;
         width: 100%;
-        height: 474px;
+        height: 435px;
         background: #4f4f4f;
         bottom: 0px;
+
+        .lowerFooterBlend{
+          position: absolute;
+          bottom: 0px;
+          height: 139.5px;
+          width: 100%;
+          background-color: #1E1E1E;
+          // z-index: 2;
+        }
       }
 
       .contentDiv {
