--- a/styles/pages/_id.scss
+++ b/styles/pages/_id.scss
@@ -43,9 +43,18 @@
     .footerBlend {
       position: absolute;
       width: 100%;
-      height: 1015px;
+      height: 758px;
       background: #4f4f4f;
       bottom: 0px;
+
+      .lowerFooterBlend{
+        position: absolute;
+        bottom: 0px;
+        height: 201.5px;
+        width: 100%;
+        background-color: #1E1E1E;
+        // z-index: 2;
+      }
     }
 
     .contentDiv {
@@ -368,7 +377,7 @@
       .footer {
         width: 100%;
         min-height: none;
-        height: 1015px;
+        height: fit-content;
         background: #4f4f4f;
       }
     }
@@ -412,9 +421,18 @@
       .footerBlend {
         position: absolute;
         width: 100%;
-        height: 474px;
+        height: 435px;
         background: #4f4f4f;
         bottom: 0px;
+
+        .lowerFooterBlend{
+          position: absolute;
+          bottom: 0px;
+          height: 139.5px;
+          width: 100%;
+          background-color: #1E1E1E;
+          // z-index: 2;
+        }
       }
 
       .contentDiv {
@@ -437,7 +455,6 @@
         .bodyContainer {
           padding: 24px 5.5% 40px 5.5%;
           width: 100%;
-          border: solid 1px;
 
           .categoryBlogBody {
             flex-direction: row;
@@ -517,7 +534,6 @@
 
         .footer {
           width: 100%;
-          min-height: 474px;
           height: fit-content;
           background: #4f4f4f;
         }
