--- a/styles/components/_relatedBlogs.scss
+++ b/styles/components/_relatedBlogs.scss
@@ -38,7 +38,7 @@
         font-size: 10px;
         line-height: 140%;
         text-transform: uppercase;
-        color: #4f4f4f;
+        color: #969696;
         margin: 0px;
         padding: 0px;
       }
@@ -50,7 +50,7 @@
         font-weight: 700;
         font-size: 16px;
         line-height: 140%;
-        color: #4f4f4f;
+        color: #333333;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: initial;
