--- a/styles/pages/_id.scss
+++ b/styles/pages/_id.scss
@@ -47,12 +47,12 @@
       background: #4f4f4f;
       bottom: 0px;
 
-      .lowerFooterBlend{
+      .lowerFooterBlend {
         position: absolute;
         bottom: 0px;
         height: 201.5px;
         width: 100%;
-        background-color: #1E1E1E;
+        background-color: #1e1e1e;
         // z-index: 2;
       }
     }
@@ -159,13 +159,12 @@
                 padding: 0px;
 
                 .sortTitle {
-                  font-family: "Product Sans", sans-serif;
+                  font-family: "Ek Mukta";
                   font-style: normal;
                   font-weight: 700;
-                  font-size: 14px;
+                  font-size: 16px;
                   line-height: 140%;
                   color: #4f4f4f;
-                  word-spacing: 3px;
                 }
 
                 .sortButton {
@@ -188,6 +187,19 @@
 
                     .selectArrow {
                     }
+                  }
+
+                  .ant-select-selection-item {
+                    display: flex;
+                    gap: 0;
+                    margin: 4.5px 0px 0px 0px;
+                    padding: 0;
+                    font-family: "Ek Mukta";
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 16px;
+                    line-height: 140%;
+                    color: #4f4f4f;
                   }
 
                   .ant-select-selector {
@@ -298,12 +310,14 @@
                   border-radius: 4px;
 
                   .pageIconContainer {
-                    display: flex;
+                    display: inline-block;
                     flex-direction: row;
                     justify-content: center;
                     align-items: center;
                     margin: 0px;
                     padding: 0px;
+                    width: 100%;
+                    height: 100%;
 
                     .pageNumberIcon {
                       display: flex;
@@ -316,10 +330,9 @@
 
                   .pageIconContainer:hover {
                     transform: none;
-                    background: #919eab;
+                    background: transparent;
                     border-radius: 4px;
                     border: none;
-                    border: 1px solid #919eab;
                   }
 
                   .page-link {
@@ -345,6 +358,10 @@
 
                 .pageIndexIcon:hover {
                   transform: none;
+                  border: 1px solid #919eab;
+                  margin: 0;
+                  padding: 0;
+                  background: #919eab;
                 }
               }
             }
@@ -425,12 +442,12 @@
         background: #4f4f4f;
         bottom: 0px;
 
-        .lowerFooterBlend{
+        .lowerFooterBlend {
           position: absolute;
           bottom: 0px;
           height: 139.5px;
           width: 100%;
-          background-color: #1E1E1E;
+          background-color: #1e1e1e;
           // z-index: 2;
         }
       }
@@ -546,8 +563,9 @@
 .activePage {
   border: 1px solid #0000ff !important;
   .pageNumber {
-    background-color: #d9d9d9 !important;
-    color: #0000ff;
+    background-color: #ffffff !important;
+    color: #0000ff !important;
+    display: none;
   }
   .pageNumber:hover {
     transform: none;
